first round of major html tweaks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Bocor bootstrap 3 one page template</title>
+  <title>Candice Chin</title>
 
   <!-- css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -38,8 +38,8 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center inner">
           <div class="animatedParent">
-            <h1 class="animated fadeInDown">MUSIM BOCOR</h1>
-            <p class="animated fadeInUp">Udah dari dulu tahu kalo bocor kenapa nggak ditambal tong</p>
+            <h1 class="animated fadeInDown">CANDICE CHIN</h1>
+            <p class="animated fadeInUp">Utility Player and Polymath</p>
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="col-md-2">
             <div class="site-logo">
-              <a href="index.html" class="brand">Bocor</a>
+              <a href="index.html" class="brand">Candice Chin</a>
             </div>
           </div>
 
@@ -76,7 +76,7 @@
             <div class="collapse navbar-collapse" id="menu">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#intro">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#about">About Me</a></li>
                 <li><a href="#service">Services</a></li>
                 <li><a href="#works">Works</a></li>
 
@@ -100,7 +100,7 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div class="animatedParent">
             <div class="section-heading text-center animated bounceInDown">
-              <h2 class="h-bold">About our bocor team</h2>
+              <h2 class="h-bold">About Candice</h2>
               <div class="divider-header"></div>
             </div>
           </div>
@@ -118,12 +118,12 @@
         <div class="col-lg-8 col-lg-offset-2 animatedParent">
           <div class="text-center">
             <p>
-              Lorem ipsum dolor sit amet, vis tale malis tacimates et, graece doctus omnesque ne est, deserunt pertinacia ne nam. Pro eu simul affert referrentur, natum mutat erroribus te his
+              I am a Web Developer in-flight, a seasoned Finance professional with an MBA/MA, and a violinist.
             </p>
             <p>
-              Ne mundi fabulas corrumpit vim, nulla vivendum conceptam eu nam. Ius ex principes complectitur, ex quo duis suscipit. Ius fastidii reprimique no. Sadipscing appellantur pri ad. Oratio moderatius definitiones cum ex, mea ne brute vivendum percipitur.
+              Based in Seattle, WA and can be reached via chincandice2007@gmail.com or 206-779-4924.  Also see LinkedIn at https://www.linkedin.com/in/candicechinfpa/ and GitHub at https://github.com/cchin1
             </p>
-            <a href="#service" class="btn btn-skin btn-scroll">What we do</a>
+            <a href="#service" class="btn btn-skin btn-scroll">What I do</a>
           </div>
         </div>
 
@@ -142,7 +142,7 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div>
             <div class="section-heading text-center">
-              <h2 class="h-bold">What we can do for you</h2>
+              <h2 class="h-bold">What I can do for you</h2>
               <div class="divider-header"></div>
             </div>
           </div>
@@ -162,7 +162,7 @@
                   <span class="fa fa-laptop fa-2x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5>Web Design</h5>
+                  <h5>Web Development</h5>
                   <div class="divider-header"></div>
                   <p>
                     Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
@@ -179,10 +179,10 @@
                   <span class="fa fa-camera fa-2x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5>Photography</h5>
+                  <h5>Financial Management Consulting</h5>
                   <div class="divider-header"></div>
                   <p>
-                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
+                    Financial Planning & Analysis (FP&A) through Speed to Clarity Consulting
                   </p>
                   <a href="#" class="btn btn-skin">Learn more</a>
                 </div>
@@ -196,10 +196,10 @@
                   <span class="fa fa-code fa-2x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5>Graphic design</h5>
+                  <h5>Violin Performance</h5>
                   <div class="divider-header"></div>
                   <p>
-                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
+                    I'm an active freelance violinist.
                   </p>
                   <a href="#" class="btn btn-skin">Learn more</a>
                 </div>
@@ -222,7 +222,7 @@
           <div>
             <div class="animatedParent">
               <div class="section-heading text-center">
-                <h2 class="h-bold animated bounceInDown">What we have done</h2>
+                <h2 class="h-bold animated bounceInDown">Portfolio / Web Projects</h2>
                 <div class="divider-header"></div>
               </div>
             </div>
@@ -274,7 +274,7 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div class="animatedParent">
             <div class="section-heading text-center">
-              <h2 class="h-bold animated bounceInDown">Get in touch with us</h2>
+              <h2 class="h-bold animated bounceInDown">Get in touch with Candice</h2>
               <div class="divider-header"></div>
             </div>
           </div>
@@ -334,12 +334,7 @@
         <div class="col-md-6">
           <ul class="footer-menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Press release</a></li>
           </ul>
-        </div>
-        <div class="col-md-6 text-right copyright">
-          &copy;Copyright - Bocor. All Rights Reserved
-          
         </div>
       </div>
     </div>
