more styling and html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               I am a Web Developer in-flight, a seasoned Finance professional with an MBA/MA, and a violinist.
             </p>
             <p>
-              Based in Seattle, WA and can be reached via chincandice2007@gmail.com or 206-779-4924.  Also see LinkedIn at https://www.linkedin.com/in/candicechinfpa/ and GitHub at https://github.com/cchin1
+              Based in Seattle, WA and can be reached via chincandice2007@gmail.com or 206-779-4924.  Also see LinkedIn <a href="https://www.linkedin.com/in/candicechinfpa/" and GitHub <a href="https://github.com/cchin1" </a>
             </p>
             <a href="#service" class="btn btn-skin btn-scroll">What I do</a>
           </div>
@@ -165,9 +165,9 @@
                   <h5>Web Development</h5>
                   <div class="divider-header"></div>
                   <p>
-                    Ad denique euripidis signiferumque vim, iusto admodum quo cu. No tritani neglegentur mediocritatem duo.
+                    Attending UW Coding Bootcamp (graduation January 2020) and applying deep learning to become a world-class Web Developer.
                   </p>
-                  <a href="#" class="btn btn-skin">Learn more</a>
+                  <a href="img/CandiceChinTechResume.pdf" class="btn btn-skin">Learn more</a>
                 </div>
               </div>
             </div>
@@ -182,9 +182,9 @@
                   <h5>Financial Management Consulting</h5>
                   <div class="divider-header"></div>
                   <p>
-                    Financial Planning & Analysis (FP&A) through Speed to Clarity Consulting
+                    Financial Planning & Analysis (FP&A) through Speed to Clarity Consulting.  Click on the 'Learn more' button to see my finance website.
                   </p>
-                  <a href="#" class="btn btn-skin">Learn more</a>
+                  <a href="https://www.speed-to-clarity.com/" class="btn btn-skin">Learn more</a>
                 </div>
               </div>
             </div>
@@ -199,9 +199,9 @@
                   <h5>Violin Performance</h5>
                   <div class="divider-header"></div>
                   <p>
-                    I'm an active freelance violinist.
+                    I'm a classically-trained, active freelance violinist, perfoming regularly in recital, local orchestras, and with my string quartet The Weeknighters.
                   </p>
-                  <a href="#" class="btn btn-skin">Learn more</a>
+                  <a href="img/Candice Chin Music Resume Mar2019.pdf" class="btn btn-skin">Learn more</a>
                 </div>
               </div>
             </div>
