--- a/index.html
+++ b/index.html
@@ -118,10 +118,7 @@
         <div class="col-lg-8 col-lg-offset-2 animatedParent">
           <div class="text-center">
             <p>
-              I am a Web Developer in-flight, a seasoned Finance professional with an MBA/MA, and a violinist.
-            </p>
-            <p>
-              Based in Seattle, WA and can be reached via chincandice2007@gmail.com or 206-779-4924.  Also see LinkedIn <a href="https://www.linkedin.com/in/candicechinfpa/" and GitHub <a href="https://github.com/cchin1" </a>
+              I'm a Web Developer, a seasoned Finance professional with an MBA/MA, and a violinist based in Seattle, WA. Reach me via chincandice2007@gmail.com or 206-779-4924. Also see LinkedIn <a href="https://www.linkedin.com/in/candicechinfpa/"> and GitHub <a href="https://github.com/cchin1">
             </p>
             <a href="#service" class="btn btn-skin btn-scroll">What I do</a>
           </div>
