--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center inner">
           <div class="animatedParent">
-            <h1 class="animated fadeInDown">CANDICE CHIN</h1>
+            <h1 class="animated fadeInDown">CANDICE CHIN<br>Web Developer</h1>
             <p class="animated fadeInUp">Utility Player and Polymath</p>
           </div>
         </div>
