--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="animated rotateInDownLeft slow">
               <div class="service-box">
                 <div class="service-icon">
-                  <span class="fa fa-camera fa-2x"></span>
+                  <span class="fa fa-dollar fa-2x"></span>
                 </div>
                 <div class="service-desc">
                   <h5>Financial Management Consulting</h5>
@@ -192,7 +192,7 @@
             <div class="animated rotateInDownLeft slower">
               <div class="service-box">
                 <div class="service-icon">
-                  <span class="fa fa-code fa-2x"></span>
+                  <span class="fa fa-music fa-2x"></span>
                 </div>
                 <div class="service-desc">
                   <h5>Violin Performance</h5>
