--- a/index.html
+++ b/index.html
@@ -238,28 +238,54 @@
 
           <div class="row gallery-item">
             <div class="col-md-3 animated fadeInUp">
-              <a href="img/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1">
+              <a href="img/works/1.jpg" title="Crystals Collector" data-lightbox-gallery="gallery1">
 								<img src="img/works/1.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
             <div class="col-md-3 animated fadeInUp slow">
-              <a href="img/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1">
+              <a href="img/works/2.jpg" title="Trivia Game" data-lightbox-gallery="gallery1">
 								<img src="img/works/2.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
             <div class="col-md-3 animated fadeInUp slower">
-              <a href="img/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1">
+              <a href="img/works/3.jpg" title="Trail Running Dangers" data-lightbox-gallery="gallery1">
 								<img src="img/works/3.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
             <div class="col-md-3 animated fadeInUp">
-              <a href="img/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1">
+              <a href="img/works/4.jpg" title="The Perfect Date" data-lightbox-gallery="gallery1">
 								<img src="img/works/4.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
           </div>
-
         </div>
+      </div>
+      <br>
+      <div class="row projectDetails">
+          <div class="col-sm-12 col-md-12 col-lg-12">
+          <p>Links to Project Code & Deployed Pages</p>
+
+            <div class="col-md-3">
+              <a href="https://github.com/cchin1/unit-4-game"> Crystals Collector Code 
+              <br><a href="https://cchin1.github.io/unit-4-game/"> Crystals Collector Page
+            </div> 
+          
+            <div class="col-md-3">
+                <a href="https://github.com/cchin1/TriviaGame"> Violin Trivia Code 
+                <br><a href="https://cchin1.github.io/TriviaGame/"> Violin Trivia Page
+            </div> 
+
+            <div class="col-md-3">
+                <a href="https://github.com/cchin1/GifTastic"> Trail Running Dangers Code 
+                <br><a href="https://cchin1.github.io/GifTastic/"> Trail Running Dangers Page
+            </div>   
+
+            <div class="col-md-3">
+                <a href="https://github.com/cchin1/UW-Coding-Project-1"> The Perfect Date Code 
+                <br><a href="https://cchin1.github.io/UW-Coding-Project-1/"> The Perfect Date Page
+            </div>   
+
+          </div>
       </div>
     </div>
 
