--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 
         <div class="col-lg-8 col-lg-offset-2 animatedParent">
           <div class="text-center">
+
+            <img scr="/img/CandiceChinheadshot.png" alt="Headshot" width="200" height="200">
+
             <p>
               I'm a Web Developer, a seasoned Finance professional with an MBA/MA, and a violinist based in Seattle, WA. Reach me via chincandice2007@gmail.com or 206-779-4924. 
               <br><a href="https://www.linkedin.com/in/candicechinfpa/"> LinkedIn Profile 
