revised slight text

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   <h5>Web Development</h5>
                   <div class="divider-header"></div>
                   <p>
-                    Attending UW Coding Bootcamp (graduation January 2020) and applying deep learning to become a world-class Web Developer.
+                    Attending UW Coding Bootcamp (graduation January 2020) and applying deep learning to become a world-class full-stack Web Developer.
                   </p>
                   <a href="img/CandiceChinTechResume.pdf" class="btn btn-skin">Learn more</a>
                 </div>
