updated for Project #2

--- a/index.html
+++ b/index.html
@@ -240,24 +240,29 @@
         <div class="col-sm-12 col-md-12 col-lg-12">
 
           <div class="row gallery-item">
-            <div class="col-md-3 animated fadeInUp">
+            <div class="col-md-4 animated fadeInUp">
               <a href="img/works/1.jpg" title="Crystals Collector" data-lightbox-gallery="gallery1">
 								<img src="img/works/1.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
-            <div class="col-md-3 animated fadeInUp slow">
+            <div class="col-md-4 animated fadeInUp slow">
               <a href="img/works/2.jpg" title="Trivia Game" data-lightbox-gallery="gallery1">
 								<img src="img/works/2.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
-            <div class="col-md-3 animated fadeInUp slower">
+            <div class="col-md-4 animated fadeInUp slower">
               <a href="img/works/3.jpg" title="Trail Running Dangers" data-lightbox-gallery="gallery1">
 								<img src="img/works/3.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
-            <div class="col-md-3 animated fadeInUp">
+            <div class="col-md-4 animated fadeInUp">
               <a href="img/works/4.jpg" title="The Perfect Date" data-lightbox-gallery="gallery1">
 								<img src="img/works/4.jpg" class="img-responsive" alt="img">
+							</a>
+            </div>
+            <div class="col-md-4 animated fadeInUp">
+              <a href="img/works/Persona.jpg" title="Persona" data-lightbox-gallery="gallery1">
+								<img src="img/works/Persona.jpg" class="img-responsive" alt="img">
 							</a>
             </div>
           </div>
@@ -268,25 +273,30 @@
           <div class="col-sm-12 col-md-12 col-lg-12">
           <p>Links to Project Code & Deployed Pages</p>
 
-            <div class="col-md-3">
+            <div class="col-md-4">
               <a href="https://github.com/cchin1/unit-4-game"> Crystals Collector Code 
               <br><a href="https://cchin1.github.io/unit-4-game/"> Crystals Collector Page
             </div> 
           
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <a href="https://github.com/cchin1/TriviaGame"> Violin Trivia Code 
                 <br><a href="https://cchin1.github.io/TriviaGame/"> Violin Trivia Page
             </div> 
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <a href="https://github.com/cchin1/GifTastic"> Trail Running Dangers Code 
                 <br><a href="https://cchin1.github.io/GifTastic/"> Trail Running Dangers Page
             </div>   
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <a href="https://github.com/cchin1/UW-Coding-Project-1"> The Perfect Date Code 
                 <br><a href="https://cchin1.github.io/UW-Coding-Project-1/"> The Perfect Date Page
             </div>   
+
+            <div class="col-md-4">
+              <a href="https://github.com/Nolimits1/persona"> Persona Code 
+              <br><a href="https://super-persona.herokuapp.com/"> Persona Page
+          </div>   
 
           </div>
       </div>
